--- a/WebContent/talk.html
+++ b/WebContent/talk.html
@@ -33,7 +33,7 @@
 													,page:true
 											  		,limits:[10,30,50,100]
 											  		,height:'full-50'
-	  												,id:'idTest'}" 
+	  												,id:'tabId'}" 
 	  		lay-filter="demo">
 		<thead>
 		    <tr>
@@ -166,7 +166,7 @@
   	  	active = {
 		 look: function(){ //获取选中数据
 	 	     var info = $("#keyword").val();
-	 	     table.reload('idTest', {
+	 	     table.reload('tabId', {
 	 	    	 url:'/xy_ssh/user_adminGet'
 	 	    	  ,where: { //设定异步数据接口的额外参数，任意设
 	 	    		 condition: info
@@ -265,7 +265,7 @@
 			            			 avaPath:avaPath,
 			            				},
 			            	        function(result){
-			            	          table.reload('idTest',{})          
+			            	          table.reload('tabId',{})          
 			            	          layer.msg('添加成功')
 			            	      });
 			        	  });
@@ -278,7 +278,7 @@
 	        });
   	    }
   	    ,edit: function(){ //修改选中数据
-  	    	var checkStatus = table.checkStatus('idTest');
+  	    	var checkStatus = table.checkStatus('tabId');
     	      var data = checkStatus.data;
     	      if(data.length==0){
     	    	  layer.msg("不选择修改用户你让我如何编辑哟")
@@ -347,8 +347,8 @@
     	  	            			 avaPath:avaPath,
     	  	            				},
     	  	            	        function(result){
-    	  	            	          table.reload('idTest',{})          
-    	  	            	          layer.msg('保存修改成功')
+    	  	            	          table.reload('tabId',{});          
+    	  	            	          layer.msg('保存修改成功');
     	  	            	      });
     	  	        	  });
     	  	          }
@@ -357,24 +357,27 @@
     	      
   	    }
   	    ,del: function(){ //删除选中数据
-  	    	var checkStatus = table.checkStatus('idTest');
+  	    	var checkStatus = table.checkStatus('tabId');
     	    var data = checkStatus.data;
     	    //判断用户选择了多少行
     	    if(data.length==0){
     	    	layer.msg("请选择删除哪一行哟");
     	    }else{
-    	    	//多行删除
-    	    	for(var i=0;i<data.length;i++){
-		    	    var use_id = data[i].use_id;
-		    	    $.post(
-		          			"/xy_ssh/user_delete",
-		          	        {use_id:use_id,
-		          				},
-		          	        function(result){
-		          	          table.reload('idTest',{});          
-		          	      });
-    	    	}
+    	    	layer.confirm('是否删除？', {icon: 3, title:'提示'}, function(index){
+    	    		  //do something
+    	    		//多行删除
+        	    	for(var i=0;i<data.length;i++){
+    		    	    var use_id = data[i].use_id;
+    		    	    $.post(
+    		          			"/xy_ssh/user_delete",
+    		          	        {use_id:use_id},
+    		          	        function(result){
+    		          	          table.reload('tabId',{});          
+    		          	      });
+        	    	}
 		          	layer.msg("已删除"+data.length+"个用户");
+    	    		  layer.close(index);
+    	    		});
     	    }
   	    },
   	  };
@@ -385,7 +388,9 @@
   	  });
   	//单击行勾选checkbox事件
   	$(document).on("click",".layui-table-body table.layui-table tbody tr", function () {
-  	    var index = $(this).attr('data-index');
+  	    //返回被选元素的属性值。
+  		var index = $(this).attr('data-index');
+  		//查找当前元素的父元素中带有 "layui-table-box" 类的父元素：
   	    var tableBox = $(this).parents('.layui-table-box');
   	    //存在固定列
   	    if (tableBox.find(".layui-table-fixed.layui-table-fixed-l").length>0) {
@@ -393,13 +398,13 @@
   	    } else {
   	        tableDiv = tableBox.find(".layui-table-body.layui-table-main");
   	    }
-  	    var checkCell = tableDiv.find("tr[data-index=" + index + "]").find("td div.laytable-cell-checkbox div.layui-form-checkbox");
+  	    var checkCell = tableDiv.find("tr[data-index=" + index + "]").find("td div.laytable-cell-checkbox div.layui-form-checkbox I");
   	    if (checkCell.length>0) {
   	        checkCell.click();
   	    }
   	});
-	//用于阻止当前事件在DOM树上冒泡。
-  	$(document).on("click", "div.laytable-cell-checkbox div.layui-form-checkbox", function (e) {
+
+  	$(document).on("click", "td div.laytable-cell-checkbox div.layui-form-checkbox", function (e) {
   	    e.stopPropagation();
   	});
 });
